# bg95_driver_dev_project

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  partitions.csv  run_main.sh  run_tests.sh
main/: CMakeLists.txt  bg95_driver_dev_project.c
test/: CMakeLists.txt  test_at_cmd_cgdcont.c  test_at_cmd_cops.c  test_at_cmd_cpin.c  test_at_cmd_csq.c  test_at_cmd_handler.c  test_at_cmd_parser.c  test_at_cmd_qmtcfg.c  test_at_cmd_qmtclose.c  test_at_cmd_qmtconn.c  test_at_cmd_qmtdisc.c  test_at_cmd_qmtopen.c  test_at_cmd_qmtpub.c  test_at_cmd_qmtsub.c  test_at_cmd_qmtuns.c  test_dummy.c  test_main.c  test_mock_uart_interface.c
