idf_component_register(
	SRCS
	"test_main.c"
	"test_dummy.c"
	"test_at_cmd_parser.c"
	"test_mock_uart_interface.c"
	"test_at_cmd_handler.c"
	#### INDIVIDUAL AT CMD TESTING NOW #### 
	"test_at_cmd_cpin.c"
	"test_at_cmd_csq.c"
	"test_at_cmd_cops.c"
	"test_at_cmd_cgdcont.c"
	"test_at_cmd_qmtcfg.c"
	"test_at_cmd_qmtopen.c"
	"test_at_cmd_qmtclose.c"
	"test_at_cmd_qmtconn.c"
	"test_at_cmd_qmtdisc.c"
	"test_at_cmd_qmtpub.c"
	"test_at_cmd_qmtsub.c"
	"test_at_cmd_qmtuns.c"
	INCLUDE_DIRS
	"."
	REQUIRES
	unity
	freertos
	bg95_driver
	espcoredump
)

